# grantleetheme

./: .git-blame-ignore-revs  .kde-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5GrantleeThemeConfig.cmake.in  KPimGrantleeThemeConfig.cmake.in  README.md  grantleetheme.categories  grantleetheme.renamecategories  metainfo.yaml
autotest/: CMakeLists.txt  grantleethememanagertest.cpp  grantleethemetest.cpp  grantleethemetest.h
autotest/data/icons/dummyTheme/: index.theme
autotest/data/themes/color/: color.html  color.testdesktop  color_expected.html
autotest/data/themes/valid/: header.html  header_expected.html
cmake/: KPIMGrantleeMacros.cmake
docs/: plugins_icon.md
po/ar/: libgrantleetheme.po  libgrantleetheme6.po
po/ast/: libgrantleetheme.po  libgrantleetheme6.po
po/bg/: libgrantleetheme.po  libgrantleetheme6.po
po/bs/: libgrantleetheme.po  libgrantleetheme6.po
po/ca/: libgrantleetheme.po  libgrantleetheme6.po
po/ca@valencia/: libgrantleetheme.po  libgrantleetheme6.po
po/cs/: libgrantleetheme.po  libgrantleetheme6.po
po/da/: libgrantleetheme.po  libgrantleetheme6.po
po/de/: libgrantleetheme.po  libgrantleetheme6.po
po/el/: libgrantleetheme.po  libgrantleetheme6.po
po/en_GB/: libgrantleetheme.po  libgrantleetheme6.po
po/eo/: libgrantleetheme.po  libgrantleetheme6.po
po/es/: libgrantleetheme.po  libgrantleetheme6.po
po/et/: libgrantleetheme.po  libgrantleetheme6.po
po/eu/: libgrantleetheme.po  libgrantleetheme6.po
po/fi/: libgrantleetheme.po  libgrantleetheme6.po
po/fr/: libgrantleetheme.po  libgrantleetheme6.po
po/ga/: libgrantleetheme6.po
po/gl/: libgrantleetheme.po  libgrantleetheme6.po
po/he/: libgrantleetheme6.po
po/hi/: libgrantleetheme.po  libgrantleetheme6.po
po/hu/: libgrantleetheme.po  libgrantleetheme6.po
po/ia/: libgrantleetheme.po  libgrantleetheme6.po
po/it/: libgrantleetheme.po  libgrantleetheme6.po
po/ja/: libgrantleetheme.po  libgrantleetheme6.po
po/ka/: libgrantleetheme.po  libgrantleetheme6.po
po/kk/: libgrantleetheme.po  libgrantleetheme6.po
po/ko/: libgrantleetheme.po  libgrantleetheme6.po
po/lt/: libgrantleetheme.po  libgrantleetheme6.po
po/lv/: libgrantleetheme6.po
po/nb/: libgrantleetheme.po  libgrantleetheme6.po
po/nds/: libgrantleetheme.po  libgrantleetheme6.po
po/nl/: libgrantleetheme.po  libgrantleetheme6.po
po/nn/: libgrantleetheme.po  libgrantleetheme6.po
po/pl/: libgrantleetheme.po  libgrantleetheme6.po
po/pt/: libgrantleetheme.po  libgrantleetheme6.po
po/pt_BR/: libgrantleetheme.po  libgrantleetheme6.po
po/ro/: libgrantleetheme.po  libgrantleetheme6.po
po/ru/: libgrantleetheme.po  libgrantleetheme6.po
po/sa/: libgrantleetheme.po  libgrantleetheme6.po
po/sk/: libgrantleetheme.po  libgrantleetheme6.po
po/sl/: libgrantleetheme.po  libgrantleetheme6.po
po/sr/: libgrantleetheme.po  libgrantleetheme6.po
po/sr@ijekavian/: libgrantleetheme.po  libgrantleetheme6.po
po/sr@ijekavianlatin/: libgrantleetheme.po  libgrantleetheme6.po
po/sr@latin/: libgrantleetheme.po  libgrantleetheme6.po
po/sv/: libgrantleetheme.po  libgrantleetheme6.po
po/ta/: libgrantleetheme6.po
po/tr/: libgrantleetheme.po  libgrantleetheme6.po
po/ug/: libgrantleetheme.po  libgrantleetheme6.po
po/uk/: libgrantleetheme.po  libgrantleetheme6.po
po/zh_CN/: libgrantleetheme.po  libgrantleetheme6.po
po/zh_TW/: libgrantleetheme.po  libgrantleetheme6.po
src/: CMakeLists.txt  Messages.sh  config-grantleetheme.h.cmake  config-grantleetheme.h.in  genericformatter.cpp  genericformatter.h  grantleeki18nlocalizer.cpp  grantleeki18nlocalizer.h  grantleeki18nlocalizer_p.h  grantleetheme-index.qdoc  grantleetheme.cpp  grantleetheme.h  grantleetheme.qdoc  grantleetheme.qdocconf  grantleetheme_p.h  grantleethemeengine.cpp  grantleethemeengine.h  grantleethememanager.cpp  grantleethememanager.h  qtresourcetemplateloader.cpp  qtresourcetemplateloader.h
src/plugin/: CMakeLists.txt  color.cpp  color.h  colorscheme.cpp  colorscheme.h  icon.cpp  icon.h  kdegrantleeplugin.cpp  kdegrantleeplugin.h  palette.cpp  palette.h
